# gatekeeper-door

./: .dir-locals.el  .gitignore  .gitmodules  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.template  README.md  armv7-toolchain.cmake  generate-creds.py
creds/: generate-creds.py  requirements.txt
enroll/: Cargo.toml
enroll/src/: main.rs
gatekeeper/: Cargo.toml
gatekeeper/src/: beeper.rs  lib.rs  reader.rs
libgatekeeper-sys/: Cargo.toml
libgatekeeper-sys/examples/: issue_tag.rs  read_tag.rs
libgatekeeper-sys/src/: ffi.rs  lib.rs
src/: beeper.rs  door.rs  lib.rs  main.rs  pwm.rs
