[package]
authors = [
  "Mary Strodl <ipadlover8322@gmail.com>",
  "Steven Mirabito <steven@stevenmirabito.com>"
]
name = "gatekeeper-door"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.18", features = ["derive", "env"] }
log = "0.4.20"
#sysfs-pwm = "0.1.0"
gatekeeper-core = "0.2.1"
paho-mqtt = "0.12.3"
serde_json = "1.0.64"
gpio-cdev = "0.6.0"
env_logger = "0.11.0"
serde = { version = "1.0.195", features = ["derive"] }
lazy_static = "1.4.0"
dotenvy = "0.15.7"
