[package]
name = "enroll"
version = "0.1.0"
authors = ["Mary Strodl <ipadlover8322@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.3", features = ["blocking", "json"] }
serde_json = "1.0.64"
libgatekeeper-sys = { path = "../libgatekeeper-sys" }
clap = "2.27.1"
serde = { version = "1.0.126", features = ["derive"] }

[[bin]]
name = "enroll"
path = "src/main.rs"
