[package]
authors = ["Steven Mirabito <steven@stevenmirabito.com>"]
name = "gatekeeper-door"
version = "0.1.0"
edition = "2018"

[lib]
name = "gatekeeper"
path = "src/lib.rs"

[[bin]]
name = "gatekeeper"
path = "src/bin/main.rs"

[dependencies]
chan = "0.1.19"
chan-signal = "0.3.1"
clap = "2.27.1"
daemonize = "0.2.3"
log = "0.3.8"
log4rs = "0.7.0"
sysfs-pwm = "0.1.0"
nearfield = { git = "https://github.com/stevenmirabito/nearfield" }
