[package]
authors = ["Steven Mirabito <steven@stevenmirabito.com>"]
name = "gatekeeper-door"
version = "0.1.0"
edition = "2018"

[lib]
name = "gatekeeper"
path = "src/lib.rs"

[[bin]]
name = "gatekeeper"
path = "src/bin/main.rs"

[dependencies]
chan = "0.1.19"
chan-signal = "0.3.1"
clap = "2.27.1"
log = "0.3.8"
log4rs = "0.7.0"
sysfs-pwm = "0.1.0"
libgatekeeper-sys = { path = "../libgatekeeper-sys" }
paho-mqtt = "0.9.1"
serde_json = "1.0.64"
